RESOLVED FIXED62435
[GTK][EFL] m_imageInterpolationQuality is not initialized in PlatformContextCairo::PlatformContextCairo.
https://bugs.webkit.org/show_bug.cgi?id=62435
Summary [GTK][EFL] m_imageInterpolationQuality is not initialized in PlatformContextC...
Ryuan Choi
Reported 2011-06-10 00:22:54 PDT
Patch will be added.
Attachments
Patch (1.37 KB, patch)
2011-06-10 00:31 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2011-06-10 00:31:14 PDT
Andreas Kling
Comment 2 2011-06-10 03:45:55 PDT
Comment on attachment 96702 [details] Patch r=me
WebKit Review Bot
Comment 3 2011-06-10 04:23:49 PDT
Comment on attachment 96702 [details] Patch Clearing flags on attachment: 96702 Committed r88536: <http://trac.webkit.org/changeset/88536>
WebKit Review Bot
Comment 4 2011-06-10 04:23:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.