2011-06-10  Ryuan Choi  <ryuan.choi@samsung.com>

Reviewed by Andreas Kling.

        [GTK][EFL] m_imageInterpolationQuality is not initialized in PlatformContextCairo::PlatformContextCairo.
        https://bugs.webkit.org/show_bug.cgi?id=62435

        No new tests required as just fixed warning.

        * platform/graphics/cairo/PlatformContextCairo.cpp:
        (WebCore::PlatformContextCairo::PlatformContextCairo):

2011-06-11-06-09  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: protocol: json: Whitespace can be inserted between any pair of tokens.
        https://bugs.webkit.org/show_bug.cgi?id=62377

        * inspector/InspectorValues.cpp:

Canonical link: https://commits.webkit.org/77942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88536 268f45cc-cd09-0410-ab3c-d52691b4dbfc